@@ -162,6 +162,7 @@ DECLARE Function SliceCollidePoint(byval sl as Slice Ptr, byval x as integer, by
 DECLARE Function SliceContains(byval sl1 as Slice Ptr, byval sl2 as Slice Ptr) as integer
 DECLARE Sub SliceClamp(byval sl1 as Slice Ptr, byval sl2 as Slice Ptr)
 DECLARE Sub YSortChildSlices(byval parent as slice ptr)
+DECLARE Sub CustomSortChildSlices(byval parent as slice ptr)
 
 DECLARE FUNCTION NewSliceOfType (BYVAL t AS SliceTypes, BYVAL parent AS Slice Ptr=0) AS Slice Ptr
 
