@@ -2096,6 +2096,15 @@ SELECT CASE AS CONST id
   IF valid_plotslice(retvals(0), "y sort children") THEN
    YSortChildSlices plotslices(retvals(0))
   END IF
+ CASE 406 '--set slice sort
+  IF valid_plotslice(retvals(0), "set sort order") THEN
+   plotslices(retvals(0))->Sorter = retvals(1)
+  END IF
+ CASE 407 '--sort children
+  IF valid_plotslice(retvals(0), "sort children") THEN
+   CustomSortChildSlices plotslices(retvals(0))
+  END IF
+ 
  
 END SELECT
 
